Finalização do layout v1.

--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,19 @@
         </div>
     </header>
     <main>
-        <div class="capturas">
-            <a href="nada">Mostrar todas as capturas</a>
-        </div>
-        <div class="formulario">
-
+        <div id="elements">
+            <div class="formulario">
+                <form class="formulary">
+                    <h2>Pokemon capturado</h2>
+                    <input class="text-form" type="text">
+                    <h2>Pokébolas utilizadas</h2>
+                    <input class="text-form" type="text">
+                    <input type="submit" value="Registrar" id="sbmt-btn">
+                </form>
+            </div>
+            <div class="capturas">
+                <a id="show-caughts" href="nada">Mostrar todas as capturas</a>
+            </div>
         </div>
     </main>
 </body>
